--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@shopify/flash-list": "^1.7.2",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-svg": "^15.10.1"
+    "react-native-reanimated": "^3.16.6",
+    "react-native-svg": "^15.10.1",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
